--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <img src="images/hashu.jpg" alt="My image">
   <h1>Hashwanth Alla</h1>
   <p><em>Founder and CEO of <a href="#"><strong>Hash & Co</strong></a>.</em></p>
-  <p>I am very interested in we development, if you have any idea? why wait? just contact me.</p>
+  <p>I am very interested in web development, if you have any idea? why wait? just contact me.</p>
   <hr size="2" noshade>
   <h3>Educational Details</h3>
   <ul>
