--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <img src="images/hashu.jpg" alt="My image">
   <h1>Hashwanth Alla</h1>
-  <p><em>Founder and CEO of <a href="#"><strong>Hash & Co</strong></a>.</em></p>
+  <p><em>Founder and CEO of <a href="buildingstate.html"><strong>Hash & Co</strong></a>.</em></p>
   <p>I am very interested in web development, if you have any idea? why wait? just contact me.</p>
   <hr size="2" noshade>
   <h3>Educational Details</h3>
