--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <li>Intermediate Education</li>
     <li>Batchelor of Technology</li>
   </ul>
-  <a href="myhobbies.html">My Hobbies</a>
-  <a href="contactme.html">Contact me here</a>
+  <p>you can know my hobbies here:<a href="myhobbies.html">My Hobbies</a><br>
+  you can know my contact details here:<a href="contactme.html">Contact me here</a></p>
 </body>
 
 
