--- a/contactme.html
+++ b/contactme.html
@@ -21,11 +21,11 @@
      <hr>
      <form action="mailto:hashwanthalla50007@gmail.com" method="post" enctyp="text/plain">
        <label>Your Name:</label><br>
-       <input type="text" name="yourname:" value=""><br>
+       <input type="text" name="yourname" value=""><br>
        <label>Your Email:</label><br>
-       <input type="email" name="youremail:" value=""><br>
+       <input type="email" name="youremail" value=""><br>
        <label>Your Message:</label><br>
-       <textarea name="Your Message:" rows="10" cols="30"></textarea><br>
+       <textarea name="Your Message" rows="10" cols="30"></textarea><br>
        <input type="submit" name="">
        <label>
      </form>
