--- a/contactme.html
+++ b/contactme.html
@@ -20,11 +20,11 @@
      </table>
      <hr>
      <form action="mailto:hashwanthalla50007@gmail.com" method="post" enctyp="text/plain">
-       <label>Your Name:</label><br>
-       <input type="text" name="yourname" value=""><br>
-       <label>Your Email:</label><br>
-       <input type="email" name="youremail" value=""><br>
-       <label>Your Message:</label><br>
+       <label>Your Name:</label>
+       <input type="text" name="yourname"><br>
+       <label>Your Email:</label>
+       <input type="email" name="youremail"><br>
+       <label>Your Message:</label>
        <textarea name="Your Message" rows="10" cols="30"></textarea><br>
        <input type="submit" name="">
        <label>
